# ResumeMarkupLanguage

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  parse_header.cpp  parse_header.hpp
standards/headers/: SampleResumeHeader.rzh
